--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,41 +17,36 @@
 <body>
     <main class="main w-full-screen h-auto md:h-screen bg-gray-800 flex gap-8 flex-col md:flex-row justify-center items-center p-8 before:block before:fixed before:top-0 before:bottom-0 before:left-0 before:right-0 before:opacity-30">
         <profile-card name="alex smith" location="Michigan, United States" donations="10" bg-cover="https://images.unsplash.com/photo-1707345512638-997d31a10eaa?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" profile-photo="https://thispersondoesnotexist.com/"></profile-card>
-
+    
         <profile-card name="markus davidson" location="boston, United States" donations="10" bg-cover="https://images.unsplash.com/photo-1632377082529-611764ce0fef?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MDg4MjU5NTF8&ixlib=rb-4.0.3&q=85" profile-photo="https://thispersondoesnotexist.com/"></profile-card>
     </main>
     <script>
         class Card extends HTMLElement {
             constructor() {
                 super();
-
+    
                 this.innerHTML = `
-            <section class="cursor-pointer rounded-md max-w-72 min-h-96 bg-white flex flex-col items-center drop-shadow-lg hover:scale-105 active:scale-95 transition">
-                <div class='relative h-32 w-72'>
-                    <div class='absolute bg-sky-400 opacity-80 w-full h-full rounded-t-md'></div>
-                    <img loading="lazy" src="${this.getAttribute('bg-cover') ?? ''}" alt="card cover" class='w-full h-full object-cover rounded-t-md'>
-                </div>
-                <div class="-m-9 z-10 bg-white rounded-full"><img src="${this.getAttribute('profile-photo') ?? ''}" alt="profile image" class='w-24 h-24 rounded-full object-cover p-2' /></div>
-                <div class='text-center mt-12'>
-                    <h1 class='mb-1 text-xl font-medium dark:text-gray-900'>${this.getAttribute("name")}</h1>
-                    <p class='text-sm text-gray-400 dark:text-gray-500'>${this.getAttribute("location")}</p>
-                </div>
-                <div class='flex gap-4 justify-around px-8 pt-4 w-full'>
-                    <p class='text-sm text-gray-400 dark:text-gray-500 flex flex-col items-center'><span class='mb-1 text-xl font-medium dark:text-gray-900'>${this.getAttribute("donations") ?? "0"}</span> Donations</p>
-                </div>
-                <ul class='absolute flex gap-6 -bottom-4'>
-                    <li class='w-10 h-10 bg-sky-600 rounded-full grid place-items-center' title='Email'><svg viewBox="0 0 512 512" width="20" title="envelope" fill='white'>
-                            <path d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z" />
-                        </svg></li>
-                    <li class='w-10 h-10 bg-sky-600 rounded-full grid place-items-center' title='Website'><svg viewBox="0 0 496 512" width="20" title="globe" fill='white'>
-                            <path d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z" />
-                        </svg></li>
-                </ul>
-            </section>`;
+                <section class="cursor-pointer rounded-md max-w-72 min-h-96 bg-white flex flex-col items-center drop-shadow-lg hover:scale-105 active:scale-95 transition">
+                    <div class='relative h-32 w-72'>
+                        <div class='absolute bg-cyan-400 opacity-80 w-full h-full rounded-t-md'></div>
+                        <img loading="lazy" src="${this.getAttribute('bg-cover') ?? ''}" alt="card cover" class='w-full h-full object-cover rounded-t-md'>
+                    </div>
+                    <div class="-m-9 z-10 bg-white rounded-full"><img src="${this.getAttribute('profile-photo') ?? ''}" alt="profile image" class='w-24 h-24 rounded-full object-cover p-2' /></div>
+                    <div class='text-center mt-12'>
+                        <h1 class='mb-1 text-xl font-medium dark:text-gray-900'>${this.getAttribute("name")}</h1>
+                        <p class='text-sm text-gray-400 dark:text-gray-500'>${this.getAttribute("location")}</p>
+                    </div>
+                    <div class="flex w-full items-center justify-around py-4 mt-3 border-t border-gray-100 dark:border-gray-700">
+                        <div class="text-center">
+                            <span class="text-xl font-bold text-gray-700 dark:text-gray-200">${this.getAttribute("donations")}</span>
+                            <span class="text-gray-400 dark:text-gray-400">donations</span>
+                        </div>
+                    </div>
+                </section>
+                `;
             }
         }
-
-        window.customElements.define("profile-card", Card);
+        customElements.define('profile-card', Card);
     </script>
 </body>
 </html>
