--- a/templates/index.html
+++ b/templates/index.html
@@ -249,10 +249,7 @@
                                     <img  src="https://jerusalemfoundation.org/wp-content/uploads/2020/03/617Beitc-400x250.jpg" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal">
-                                        <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
-                                    </button>
+                                    <button class="btn btn-primary" data-bs-dismiss="modal">Close Window<a href="/donate"></button>
                                 </div>
                             </div>
                         </div>
