--- a/templates/donate.html
+++ b/templates/donate.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="wrapper">
         <div class="title"><span>donate</span></div>
-        <form action="/" method="POST">
+        <form action="/donate" method="POST">
           <div class="row">
             <i class="fas fa-user"></i>
             <input type="text" placeholder="donation" name = 'donate'required>
