--- a/templates/index.html
+++ b/templates/index.html
@@ -278,10 +278,7 @@
                                     <img class="img-fluid rounded mb-5" src="https://jerusalemfoundation.org/wp-content/uploads/2020/03/258c-400x250.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal">
-                                        <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
-                                    </button>
+                                    <button class="btn btn-primary" data-bs-dismiss="modal">donate<a href="/donate"></button>
                                 </div>
                             </div>
                         </div>
@@ -310,10 +307,7 @@
                                     <img class="img-fluid rounded mb-5" src="https://jerusalemfoundation.org/wp-content/uploads/2020/03/Baka20CC8557-400x250.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal">
-                                        <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
-                                    </button>
+                                    <button class="btn btn-primary" data-bs-dismiss="modal">donate<a href="/donate"></button>
                                 </div>
                             </div>
                         </div>
