--- a/templates/index.html
+++ b/templates/index.html
@@ -249,7 +249,7 @@
                                     <img  src="https://jerusalemfoundation.org/wp-content/uploads/2020/03/617Beitc-400x250.jpg" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal">Close Window<a href="/donate"></button>
+                                    <button class="btn btn-primary" data-bs-dismiss="modal">donate<a href="/donate"></button>
                                 </div>
                             </div>
                         </div>
@@ -277,7 +277,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="https://jerusalemfoundation.org/wp-content/uploads/2020/03/258c-400x250.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4"></p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">donate<a href="/donate"></button>
                                 </div>
                             </div>
