--- a/templates/donate.html
+++ b/templates/donate.html
@@ -27,7 +27,7 @@
           <div class="row button">
             <input type="submit" value="donate">
           </div>
-          <div class="signup-link">get back to home<a href="/index">home </a></div>
+          <div class="signup-link">get back to home<a href="/index"> here </a></div>
         </form>
       </div>
     </div>
