--- a/templates/index.html
+++ b/templates/index.html
@@ -249,8 +249,9 @@
                                     <img  src="https://jerusalemfoundation.org/wp-content/uploads/2020/03/617Beitc-400x250.jpg" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-                                    <button class="btn btn-primary" data-bs-dismiss="modal">donate<a href="/donate"></button>
+                                    
                                 </div>
+                               <a class="btn btn-primary"  href="/donate">donate </a>
                             </div>
                         </div>
                     </div>
