--- a/templates/index.html
+++ b/templates/index.html
@@ -198,7 +198,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="https://jerusalemfoundation.org/wp-content/uploads/2020/03/258c-400x250.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"></p>
+                                    <p class="mb-4"> efjaefjkefjkehfjadh </p>
 
                                 </div>
                                 <a class="btn btn-primary"  href="/donate">donate </a>
