--- a/templates/index.html
+++ b/templates/index.html
@@ -167,7 +167,8 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img  src="https://jerusalemfoundation.org/wp-content/uploads/2020/03/617Beitc-400x250.jpg" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4"> This is a community center in Jerusalem, Lissan. We used to host several classes there, but they had to stop due to financial difficulties. To resume these valuable classes, we need to raise $5000. Be a change-maker and donate by pressing the button below.
+</p>
                                     
                                 </div>
                                <a class="btn btn-primary"  href="/donate">donate </a>
@@ -197,7 +198,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="https://jerusalemfoundation.org/wp-content/uploads/2020/03/258c-400x250.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"> efjaefjkefjkehfjadh </p>
+                                    <p class="mb-4">Welcome to the Lissan community center in Jerusalem. Unfortunately, we had to discontinue our classes because of financial issues. To bring these classes back, we need to raise $5000. Make a difference today by donating. Just press the button below.</p>
 
                                 </div>
                                 <a class="btn btn-primary"  href="/donate">donate </a>
@@ -227,7 +228,8 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="https://jerusalemfoundation.org/wp-content/uploads/2020/03/Baka20CC8557-400x250.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">At Lissan community center in Jerusalem, we previously offered various classes. Sadly, they came to a halt due to lack of funds. We're looking to raise $5000 to restart these classes. Be a catalyst for change and contribute by pressing the button below.
+</p>
                                     
                                 </div>
                                 <a class="btn btn-primary"  href="/donate">donate </a>
