--- a/static/styles.css
+++ b/static/styles.css
@@ -74,7 +74,7 @@
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
   --bs-link-color: #000;
-  --bs-link-hover-color: #15967d;
+  --bs-link-hover-color: #ffd700;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
@@ -2808,8 +2808,8 @@ textarea.form-control-lg {
 }
 .btn:hover {
   color: var(--bs-btn-hover-color);
-  background-color: var(--bs-btn-hover-bg);
-  border-color: var(--bs-btn-hover-border-color);
+  background-color: #fff500;
+  border-color: #fff500;
 }
 .btn-check + .btn:hover {
   color: var(--bs-btn-color);
@@ -4508,14 +4508,14 @@ textarea.form-control-lg {
   --bs-pagination-border-color: #dee2e6;
   --bs-pagination-border-radius: 0.5rem;
   --bs-pagination-hover-color: var(--bs-link-hover-color);
-  --bs-pagination-hover-bg: #e9ecef;
+  --bs-pagination-hover-bg: #ffd700;
   --bs-pagination-hover-border-color: #dee2e6;
   --bs-pagination-focus-color: var(--bs-link-hover-color);
-  --bs-pagination-focus-bg: #e9ecef;
-  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(26, 188, 156, 0.25);
+  --bs-pagination-focus-bg: #ffd700;
+  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(255, 215, 0, 0.25);
   --bs-pagination-active-color: #D8BFD8;
-  --bs-pagination-active-bg: #663399;
-  --bs-pagination-active-border-color: #663399;
+  --bs-pagination-active-bg: #ffd700;
+  --bs-pagination-active-border-color: #ffd700;
   --bs-pagination-disabled-color: #6c757d;
   --bs-pagination-disabled-bg: #D8BFD8;
   --bs-pagination-disabled-border-color: #dee2e6;
@@ -11009,7 +11009,7 @@ html {
   left: 0;
   transition: all 0.2s ease-in-out;
   opacity: 0;
-  background-color: rgba(26, 188, 156, 0.9);
+  background-color: rgba(253 255 3 / 62%);
 }
 .portfolio .portfolio-item .portfolio-item-caption:hover {
   opacity: 1;
